--- a/UI/foods-menu.html
+++ b/UI/foods-menu.html
@@ -41,7 +41,7 @@
                                 <div class="item-title">Chicken Stew and Rice - <span class="badge price">&#8358;3,500</span></div>
                                 <div class="item-subtitle"><a href="">Cooked Foods</a></div>
                                 <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre</div>
-                                <span class="item-description link">Food Details</span>
+                                <span class="item-description link">More Details</span>
                             </div>
                         </div>
                         <div>
@@ -59,7 +59,7 @@
                                 <div class="item-title">Chicken Stew and Rice - <span class="badge price">&#8358;3,500</span></div>
                                 <div class="item-subtitle"><a href="">Cooked Foods</a></div>
                                 <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre</div>
-                                <span class="item-description link">Food Details</span>
+                                <span class="item-description link">More Details</span>
                             </div>
                         </div>
                         <div>
@@ -77,7 +77,7 @@
                                 <div class="item-title">Chicken Stew and Rice - <span class="badge price">&#8358;3,500</span></div>
                                 <div class="item-subtitle"><a href="">Cooked Foods</a></div>
                                 <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre</div>
-                                <span class="item-description link">Food Details</span>
+                                <span class="item-description link">More Details</span>
                             </div>
                         </div>
                         <div>
@@ -103,7 +103,7 @@
                                 <div class="item-title">Chicken Stew and Rice - <span class="badge price">&#8358;3,500</span></div>
                                 <div class="item-subtitle"><a href="">Baked Food Items</a></div>
                                 <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre</div>
-                                <span class="item-description link">Food Details</span>
+                                <span class="item-description link">More Details</span>
                             </div>
                         </div>
                         <div>
@@ -121,7 +121,7 @@
                                 <div class="item-title">Chicken Stew and Rice - <span class="badge price">&#8358;3,500</span></div>
                                 <div class="item-subtitle"><a href="">Baked Food Items</a></div>
                                 <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre</div>
-                                <span class="item-description link">Food Details</span>
+                                <span class="item-description link">More Details</span>
                             </div>
                         </div>
                         <div>
@@ -139,7 +139,7 @@
                                 <div class="item-title">Chicken Stew and Rice - <span class="badge price">&#8358;3,500</span></div>
                                 <div class="item-subtitle"><a href="">Baked Food Items</a></div>
                                 <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre</div>
-                                <span class="item-description link">Food Details</span>
+                                <span class="item-description link">More Details</span>
                             </div>
                         </div>
                         <div>
@@ -165,7 +165,7 @@
                                 <div class="item-title">Chicken Stew and Rice - <span class="badge price">&#8358;3,500</span></div>
                                 <div class="item-subtitle"><a href="">Wine and Drinks</a></div>
                                 <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre</div>
-                                <span class="item-description link">Food Details</span>
+                                <span class="item-description link">More Details</span>
                             </div>
                         </div>
                         <div>
@@ -183,7 +183,7 @@
                                 <div class="item-title">Chicken Stew and Rice - <span class="badge price">&#8358;3,500</span></div>
                                 <div class="item-subtitle"><a href="">Wine and Drinks</a></div>
                                 <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre</div>
-                                <span class="item-description link">Food Details</span>
+                                <span class="item-description link">More Details</span>
                             </div>
                         </div>
                         <div>
@@ -201,7 +201,7 @@
                                 <div class="item-title">Chicken Stew and Rice - <span class="badge price">&#8358;3,500</span></div>
                                 <div class="item-subtitle"><a href="">Wine and Drinks</a></div>
                                 <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre</div>
-                                <span class="item-description link">Food Details</span>
+                                <span class="item-description link">More Details</span>
                             </div>
                         </div>
                         <div>
