--- a/UI/users/dashboard.html
+++ b/UI/users/dashboard.html
@@ -57,9 +57,11 @@
                     </div>
                 </div>
                 <div class="text-center contain contain-50">
-                    <a href="all-orders.html"><button class="btn btn-blue btn-sm btn-rounded">All My Orders</button></a>
-                    <a href="completed-orders.html"><button class="btn btn-green btn-sm btn-rounded">Completed Orders</button></a>
-                    <a href="pending-orders.html"><button class="btn btn-primary btn-sm btn-rounded">My Pending Orders</button></a>
+                    <div>
+                        <a href="all-orders.html"><button class="btn btn-blue btn-sm btn-rounded">All My Orders</button></a>
+                        <a href="completed-orders.html"><button class="btn btn-green btn-sm btn-rounded">Completed Orders</button></a>
+                        <a href="pending-orders.html"><button class="btn btn-primary btn-sm btn-rounded">My Pending Orders</button></a>
+                    </div>
                     <div class="card card-shadow">
                         <h2>Want To Make A Quick Order?</h2>
                         <a href="foods.html"><button class="btn btn-redx btn-block btn-rounded">Go To Foods Menu</button></a>
