--- a/UI/users/foods.html
+++ b/UI/users/foods.html
@@ -48,7 +48,7 @@
                                 <div class="item-title">Chicken Stew and Rice - <span class="badge price">&#8358;3,500</span></div>
                                 <div class="item-subtitle"><a href="">Cooked Foods</a></div>
                                 <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre</div>
-                                <span class="item-description link">Food Details</span>
+                                <span class="item-description link">More Details</span>
                             </div>
                         </div>
                         <div>
@@ -66,7 +66,7 @@
                                 <div class="item-title">Chicken Stew and Rice - <span class="badge price">&#8358;3,500</span></div>
                                 <div class="item-subtitle"><a href="">Cooked Foods</a></div>
                                 <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre</div>
-                                <span class="item-description link">Food Details</span>
+                                <span class="item-description link">More Details</span>
                             </div>
                         </div>
                         <div>
@@ -84,7 +84,7 @@
                                 <div class="item-title">Chicken Stew and Rice - <span class="badge price">&#8358;3,500</span></div>
                                 <div class="item-subtitle"><a href="">Cooked Foods</a></div>
                                 <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre</div>
-                                <span class="item-description link">Food Details</span>
+                                <span class="item-description link">More Details</span>
                             </div>
                         </div>
                         <div>
@@ -110,7 +110,7 @@
                                 <div class="item-title">Chicken Stew and Rice - <span class="badge price">&#8358;3,500</span></div>
                                 <div class="item-subtitle"><a href="">Baked Food Items</a></div>
                                 <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre</div>
-                                <span class="item-description link">Food Details</span>
+                                <span class="item-description link">More Details</span>
                             </div>
                         </div>
                         <div>
@@ -128,7 +128,7 @@
                                 <div class="item-title">Chicken Stew and Rice - <span class="badge price">&#8358;3,500</span></div>
                                 <div class="item-subtitle"><a href="">Baked Food Items</a></div>
                                 <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre</div>
-                                <span class="item-description link">Food Details</span>
+                                <span class="item-description link">More Details</span>
                             </div>
                         </div>
                         <div>
@@ -146,7 +146,7 @@
                                 <div class="item-title">Chicken Stew and Rice - <span class="badge price">&#8358;3,500</span></div>
                                 <div class="item-subtitle"><a href="">Baked Food Items</a></div>
                                 <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre</div>
-                                <span class="item-description link">Food Details</span>
+                                <span class="item-description link">More Details</span>
                             </div>
                         </div>
                         <div>
@@ -172,7 +172,7 @@
                                 <div class="item-title">Chicken Stew and Rice - <span class="badge price">&#8358;3,500</span></div>
                                 <div class="item-subtitle"><a href="">Wine and Drinks</a></div>
                                 <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre</div>
-                                <span class="item-description link">Food Details</span>
+                                <span class="item-description link">More Details</span>
                             </div>
                         </div>
                         <div>
@@ -190,7 +190,7 @@
                                 <div class="item-title">Chicken Stew and Rice - <span class="badge price">&#8358;3,500</span></div>
                                 <div class="item-subtitle"><a href="">Wine and Drinks</a></div>
                                 <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre</div>
-                                <span class="item-description link">Food Details</span>
+                                <span class="item-description link">More Details</span>
                             </div>
                         </div>
                         <div>
@@ -208,7 +208,7 @@
                                 <div class="item-title">Chicken Stew and Rice - <span class="badge price">&#8358;3,500</span></div>
                                 <div class="item-subtitle"><a href="">Wine and Drinks</a></div>
                                 <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre</div>
-                                <span class="item-description link">Food Details</span>
+                                <span class="item-description link">More Details</span>
                             </div>
                         </div>
                         <div>
