--- a/UI/users/order-now.html
+++ b/UI/users/order-now.html
@@ -37,9 +37,9 @@
     
             <section class="card text-center">
                 <h2 class="text-center">Order this food item</h2>
-                <div class="food-menu contain contain-50">   
+                <div class="contain contain-50">   
 
-                    <div class="food-item card card-shadow">
+                    <div class="card card-shadow">
                         <div class="flex">
                             <div class="image-div">
                                 <img src="../img/food-items/1.jpg" class="image" width="100%" />
@@ -52,8 +52,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="food-menu contain contain-50">
-                    <form method="POST" class="form-data food-item card card-shadow">
+                <div class="contain contain-50">
+                    <form method="POST" class="form-data card card-shadow">
                         <div class="flex">
                             <h2>Order</h2>
                             <div class="form-member text-left">
