update hero text on index.html

--- a/UI/index.html
+++ b/UI/index.html
@@ -30,8 +30,8 @@
         <div class="hero">
             <div class="contain text-center">
                 <h1 class="">Welcome To Fast Food Fast</h1>
-                <p>The best food ordering app. Fast Food Fast allows you to order food items, drinks, pastries and 
-                    African dishes to your door step at affordable prices with remarkable delivery speed!</p>
+                <p>The best food ordering app. Order the best and affordable food items, drinks, pastries and 
+                    African dishes to your door step instantly!</p>
                 <form class="form-data" method="GET">
                     <div class="form-member">
                         <input type="text" name="search" class="form-input transparent text-center hero-input" placeholder="Search foods and dishes">
