--- a/UI/foods-menu.html
+++ b/UI/foods-menu.html
@@ -21,6 +21,9 @@
                 <a href="index.html#contact">Contact Us</a>
                 <a href="signin.html" class="">Signin</a>
                 <a href="signup.html">Signup</a>
+                <a class="btn btn-green" href="users/my-cart.html">My Cart
+                    <span class="count">98</span>
+                </a>
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
             </div>
         </nav>
