--- a/UI/users/my-cart.html
+++ b/UI/users/my-cart.html
@@ -14,8 +14,10 @@
 
     <header>
         <nav class="topnav" id="myTopnav">
-            <a href="../index.html" class="brand">Fast Food Fast</a>
-            <a href="dashboard.html" class="">Dashboard</a>
+            <div class="left-nav">
+                <a href="index.html" class="brand">Fast Food Fast</a>
+            </div>
+
             <a href="foods.html" class="">Foods Menu</a>
             <div class="dropdown">
                 <button class="dropbtn active">My Orders
@@ -28,6 +30,9 @@
                 </div>
             </div>
             <a href="my-profile.html" class="">My Profile</a>
+            <a class="btn btn-green" href="my-cart.html">My Cart
+                <span class="count">98</span>
+            </a>
             <a href="../logout.html" class="btn-rounded">Logout</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
         </nav>
