--- a/UI/users/foods.html
+++ b/UI/users/foods.html
@@ -15,7 +15,7 @@
     <header>
         <nav class="topnav" id="myTopnav">
             <div class="left-nav">
-                <a href="index.html" class="brand">Fast Food Fast</a>
+                <a href="../index.html" class="brand">Fast Food Fast</a>
             </div>
             <div class="right-nav">
                 <a href="foods.html" class="active">Foods Menu</a>
