--- a/UI/admins/create-food.html
+++ b/UI/admins/create-food.html
@@ -15,31 +15,33 @@
     <header>
         <nav class="topnav" id="myTopnav">
             <div class="left-nav">
-                <a href="index.html" class="brand">Fast Food Fast</a>
+                <a href="../index.html" class="brand">Fast Food Fast</a>
             </div>
 
-            <div class="dropdown">
-                <button class="dropbtn active">Foods Menu
-                    <i class="fa fa-caret-down"></i>
-                </button>
-                <div class="dropdown-content">
-                    <a href="foods.html">All Foods</a>
-                    <a href="create-food.html">Create Food</a>
+            <div class="right-nav">
+                <div class="dropdown active">
+                    <button class="dropbtn">Foods Menu
+                        <i class="fa fa-caret-down"></i>
+                    </button>
+                    <div class="dropdown-content">
+                        <a href="foods.html">All Foods</a>
+                        <a href="create-food.html">Create Food</a>
+                    </div>
                 </div>
-            </div>
-            <div class="dropdown">
-                <button class="dropbtn">My Orders
-                    <i class="fa fa-caret-down"></i>
-                </button>
-                <div class="dropdown-content">
-                    <a href="#">Pending Orders</a>
-                    <a href="#">Completed Orders</a>
-                    <a class="" href="all-orders.html">All My Orders</a>
+                <div class="dropdown">
+                    <button class="dropbtn">Orders
+                        <i class="fa fa-caret-down"></i>
+                    </button>
+                    <div class="dropdown-content">
+                        <a href="pending-orders.html">Pending Orders</a>
+                        <a href="completed-orders.html">Completed Orders</a>
+                        <a class="all-orders.html" href="all-orders.html">All Orders</a>
+                    </div>
                 </div>
+                <a href="my-profile.html" class="">My Profile</a>
+                <a href="../logout.html" class="btn-rounded">Logout</a>
+                <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
             </div>
-            <a href="my-profile.html" class="">My Profile</a>
-            <a href="../logout.html" class="btn-rounded">Logout</a>
-            <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
         </nav>
     </header>
 
