--- a/UI/admins/dashboard.html
+++ b/UI/admins/dashboard.html
@@ -15,7 +15,7 @@
     <header>
         <nav class="topnav" id="myTopnav">
             <div class="left-nav">
-                <a href="index.html" class="brand">Fast Food Fast</a>
+                <a href="../index.html" class="brand">Fast Food Fast</a>
             </div>
             <a href="dashboard.html" class="active">Dashboard</a>
             <a href="foods.html" class="">Foods Menu</a>
