--- a/UI/admins/edit-food.html
+++ b/UI/admins/edit-food.html
@@ -15,31 +15,33 @@
     <header>
         <nav class="topnav" id="myTopnav">
             <div class="left-nav">
-                <a href="index.html" class="brand">Fast Food Fast</a>
+                <a href="../index.html" class="brand">Fast Food Fast</a>
             </div>
 
-            <div class="dropdown active">
-                <button class="dropbtn">Foods Menu
-                    <i class="fa fa-caret-down"></i>
-                </button>
-                <div class="dropdown-content">
-                    <a href="foods.html">All Foods</a>
-                    <a href="create-food.html">Create Food</a>
+            <div class="right-nav">
+                <div class="dropdown active">
+                    <button class="dropbtn">Foods Menu
+                        <i class="fa fa-caret-down"></i>
+                    </button>
+                    <div class="dropdown-content">
+                        <a href="foods.html">All Foods</a>
+                        <a href="create-food.html">Create Food</a>
+                    </div>
                 </div>
-            </div>
-            <div class="dropdown">
-                <button class="dropbtn">My Orders
-                    <i class="fa fa-caret-down"></i>
-                </button>
-                <div class="dropdown-content">
-                    <a href="#">Pending Orders</a>
-                    <a href="#">Completed Orders</a>
-                    <a class="" href="all-orders.html">All My Orders</a>
+                <div class="dropdown">
+                    <button class="dropbtn">Orders
+                        <i class="fa fa-caret-down"></i>
+                    </button>
+                    <div class="dropdown-content">
+                        <a href="pending-orders.html">Pending Orders</a>
+                        <a href="completed-orders.html">Completed Orders</a>
+                        <a class="all-orders.html" href="all-orders.html">All Orders</a>
+                    </div>
                 </div>
+                <a href="my-profile.html" class="">My Profile</a>
+                <a href="../logout.html" class="btn-rounded">Logout</a>
+                <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
             </div>
-            <a href="my-profile.html" class="">My Profile</a>
-            <a href="../logout.html" class="btn-rounded">Logout</a>
-            <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
         </nav>
     </header>
 
@@ -49,9 +51,9 @@
 
             <section class="card text-center">
                 <h2 class="text-center">Edit Food Details</h2>
-                <div class="food-menu contain contain-50">
+                <div class="contain-50">
 
-                    <div class="food-item card card-shadow">
+                    <div class="card card-shadow">
                         <div class="flex">
                             <div class="image-div">
                                 <img src="../img/food-items/1.jpg" class="image" width="100%" />
@@ -71,8 +73,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="food-menu contain contain-50">
-                    <form method="POST" class="form-data food-item card card-shadow">
+                <div class="contain-50">
+                    <form method="POST" class="form-data card card-shadow">
                         <div class="flex">
                             <h2>Edit And Update Food Data</h2>
                             <div class="form-member text-left">
@@ -100,8 +102,8 @@
                     </form>
 
                 </div>
-                <div class="food-menu contain contain-50">
-                    <form method="POST" class="form-data food-item card card-shadow">
+                <div class="contain contain-50">
+                    <form method="POST" class="form-data card card-shadow">
                         <div class="flex">
                             <h2>Update Food Image</h2>
                             <div class="form-member text-left">
