--- a/UI/users/pending-orders.html
+++ b/UI/users/pending-orders.html
@@ -15,25 +15,27 @@
     <header>
         <nav class="topnav" id="myTopnav">
             <div class="left-nav">
-                <a href="index.html" class="brand">Fast Food Fast</a>
+                <a href="../index.html" class="brand">Fast Food Fast</a>
             </div>
-            <a href="foods.html" class="">Foods Menu</a>
-            <div class="dropdown">
-                <button class="dropbtn active">My Orders
-                    <i class="fa fa-caret-down"></i>
-                </button>
-                <div class="dropdown-content">
-                    <a href="pending-orders.html">Pending Orders</a>
-                    <a href="completed-orders.html">Completed Orders</a>
-                    <a class="" href="all-orders.html">All My Orders</a>
+            <div class="right-nav">
+                <a href="foods.html" class="active">Foods Menu</a>
+                <div class="dropdown">
+                    <button class="dropbtn">My Orders
+                        <i class="fa fa-caret-down"></i>
+                    </button>
+                    <div class="dropdown-content">
+                        <a href="pending-orders.html">Pending Orders</a>
+                        <a href="completed-orders.html">Completed Orders</a>
+                        <a class="all-orders.html" href="all-orders.html">All My Orders</a>
+                    </div>
                 </div>
+                <a href="my-profile.html" class="">My Profile</a>
+                <a class="btn btn-green" href="my-cart.html">My Cart
+                    <span class="count">98</span>
+                </a>
+                <a href="../logout.html" class="btn-rounded">Logout</a>
+                <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
             </div>
-            <a href="my-profile.html" class="">My Profile</a>
-            <a class="btn btn-green" href="my-cart.html">My Cart
-                <span class="count">98</span>
-            </a>
-            <a href="../logout.html" class="btn-rounded">Logout</a>
-            <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
         </nav>
     </header>
 
