--- a/UI/foods-menu.html
+++ b/UI/foods-menu.html
@@ -89,6 +89,58 @@
                             </div>
                         </div>
                     </div>
+                    <div class="food-item card card-shadow card-shadow">
+                        <div class="flex">
+                            <div class="image-div">
+                                <img src="img/food-items/1.jpg" class="image" width="100%" />
+                            </div>
+                            <div class="content-div">
+                                <div class="item-title">Chicken Stew and Rice -
+                                    <span class="badge price">&#8358;3,500</span>
+                                </div>
+                                <div class="item-subtitle">
+                                    <a href="">Cooked Foods</a>
+                                </div>
+                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre</div>
+                                <span class="item-description link">More Details</span>
+                            </div>
+                        </div>
+                        <div>
+                            <a href="users/order-now.html">
+                                <button class="btn btn-primary">Order Now</button>
+                            </a>
+                            <button class="triggerModal btn btn-blue" data-target="mmm">Add to Cart</button>
+
+                            <div class="modal" id='mmm'>
+                                <div class="modal-content">
+                                    <div class="text-center">
+                                        <span class="close-button btn btn-primary btn-sm push-right">x</span>
+                                        <h2 class="text-center">Add this food item to existing Cart</h2>
+
+                                        <div class="content-div">
+                                            <div class="item-title">Chicken Stew and Rice -
+                                                <span class="badge price">&#8358;3,500</span>
+                                            </div>
+                                            <div class="item-description">
+                                                <p>qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre asc
+                                                    eqwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vres</p>
+                                            </div>
+                                        </div>
+                                        <form method="POST" class="xform-data xfood-item card card-shadow">
+                                            <div class="flex">
+                                                <h2>Desired Quantity</h2>
+                                                <div class="form-member text-left">
+                                                    <input type="number" class="form-input" placeholder="Enter Desired Quantity example 3">
+                                                </div>
+                                                <button class="btn btn-blue btn-block btn-rounded btn-bg">Add To Cart</button>
+                                            </div>
+                                        </form>
+                                        <button class="close-button btn btn-primary btn-block btn-rounded btn-bg">Cancel</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
                     <div class="food-item card card-shadow">
                         <div class="flex">
