--- a/UI/admins/create-food.html
+++ b/UI/admins/create-food.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Fast-Food-Fast | Order Now</title>
+    <title>Fast-Food-Fast | Create Food</title>
     <!-- stylesheets -->
     <link rel="stylesheet" type="text/css" href="../assets/css/main.css" />
 </head>
@@ -50,11 +50,11 @@
         <div class="container">
 
             <section class="card text-center">
-                <h2 class="text-center">Create A New Food Item</h2>
+                <h2 class="text-center">Create And Add Food Item To Menu</h2>
                 <div class="contain-50">
                     <form method="POST" class="form-data card card-shadow">
                         <div class="flex">
-                            <h3>Fill out this food details and click create</h3>
+                            <h3>Fill out the food details and click create</h3>
                             <div class="form-member text-left">
                                 <label for="">Food Name</label>
                                 <input type="text" class="form-input" placeholder="Enter Food Name" value="" required>
