--- a/UI/admins/foods.html
+++ b/UI/admins/foods.html
@@ -48,6 +48,18 @@
     <main class="main-content">
 
         <div class="container">
+            <section class="text-center">
+                <h1 class="text-blue">Howdy Admin?</h1>
+                <h2>Welcome To Your Foods Menu</h2>
+            </section>
+            <section class="card">
+                <div class="text-center">
+                    <h2>Add New Food Items To Your Menu</h2>
+                    <div class="contain-50">
+                        <a href="create-food.html" class="btn btn-blue btn-block btn-bg btn-rounded">Create New Food Item</a>
+                    </div>
+                </div>
+            </section>
 
             <section class="card">
                 <h2 class="text-center">Cooked Foods</h2>
