--- a/UI/users/my-cart.html
+++ b/UI/users/my-cart.html
@@ -68,7 +68,30 @@
                                     <td>&#8358; 500</td>
                                     <td class="">
                                         <button class="btn btn-primary btn-smX">Update Qauntity</button>
-                                        <button class="btn btn-red btn-smX">Remove Item</button>
+                                        <button class="triggerModal btn btn-red btn-smX">Remove Item</button>
+
+                                        <div class="modal" id='mmm'>
+                                            <div class="modal-content">
+                                                <div class="text-center">
+                                                    <span class="close-button btn btn-primary btn-sm push-right">x</span>
+                                                    <h2 class="text-center">Delete Food Item From Cart</h2>
+
+                                                    <div class="content-div">
+                                                        <div class="item-title">Chicken Stew and Rice -
+                                                            <span class="badge price">&#8358;3,500</span>
+                                                        </div>
+                                                    </div>
+                                                    <form action="javascript:;" method="POST" class=" card card-shadow">
+                                                        <div class="">
+                                                            <h2>Are you sure you want to delete this item from cart?</h2>
+                                                            <button class="btn btn-red btn-rounded btn-bg">Proceed</button>
+                                                            <button class="close-button btn btn-primary btn-rounded btn-bg">Cancel</button>
+                                                        </div>
+                                                    </form>
+                                                </div>
+                                            </div>
+                                        </div>
+
                                     </td>
                                 </tr>
                                 <tr>
@@ -79,7 +102,29 @@
                                     <td>&#8358; 7,000</td>
                                     <td class="">
                                         <button class="btn btn-primary btn-smX">Update Quantity</button>
-                                        <button class="btn btn-red btn-smX">Remove Item</button>
+                                        <button class="triggerModal btn btn-red btn-smX">Remove Item</button>
+
+                                        <div class="modal" id='mmm'>
+                                            <div class="modal-content">
+                                                <div class="text-center">
+                                                    <span class="close-button btn btn-primary btn-sm push-right">x</span>
+                                                    <h2 class="text-center">Delete Food Item From Cart</h2>
+
+                                                    <div class="content-div">
+                                                        <div class="item-title">Chicken Stew and Rice -
+                                                            <span class="badge price">&#8358;3,500</span>
+                                                        </div>
+                                                    </div>
+                                                    <form action="javascript:;" method="POST" class=" card card-shadow">
+                                                        <div class="">
+                                                            <h2>Are you sure you want to delete this item from cart?</h2>
+                                                            <button class="btn btn-red btn-rounded btn-bg">Proceed</button>
+                                                            <button class="close-button btn btn-primary btn-rounded btn-bg">Cancel</button>
+                                                        </div>
+                                                    </form>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </td>
                                 </tr>
                             </tbody>
