--- a/UI/admins/all-orders.html
+++ b/UI/admins/all-orders.html
@@ -21,19 +21,16 @@
             <div class="right-nav">
                 <a href="foods.html" class="active">Foods Menu</a>
                 <div class="dropdown">
-                    <button class="dropbtn">My Orders
+                    <button class="dropbtn">Orders
                         <i class="fa fa-caret-down"></i>
                     </button>
                     <div class="dropdown-content">
                         <a href="pending-orders.html">Pending Orders</a>
                         <a href="completed-orders.html">Completed Orders</a>
-                        <a class="all-orders.html" href="all-orders.html">All My Orders</a>
+                        <a class="all-orders.html" href="all-orders.html">All Orders</a>
                     </div>
                 </div>
                 <a href="my-profile.html" class="">My Profile</a>
-                <a class="btn btn-green" href="my-cart.html">My Cart
-                    <span class="count">98</span>
-                </a>
                 <a href="../logout.html" class="btn-rounded">Logout</a>
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
             </div>
