--- a/UI/users/ordered-items.html
+++ b/UI/users/ordered-items.html
@@ -71,7 +71,7 @@
                                     <td class="text-success">Completed</td>
                                     <td class="text-success">Delivered</td>
                                     <td class="">
-                                        <button class="btn btn-red btn-sm" disabled>Cancel Item</button>
+                                        <button class="btn btn-red btn-sm" disabled>Remove Item</button>
                                         <button class="btn btn-primary btn-sm" disabled>Update Quantity</button>
                                     </td>
                                 </tr>
@@ -85,7 +85,7 @@
                                     <td class="text-success">Completed</td>
                                     <td class="text-success">Delivered</td>
                                     <td class="">
-                                        <button class="btn btn-red btn-sm" disabled>Cancel Item</button>
+                                        <button class="btn btn-red btn-sm" disabled>Remove Item</button>
                                         <button class="btn btn-primary btn-sm" disabled>Update Quantity</button>
                                     </td>
                                 </tr>
